Endpoints for bills chart and monthly economy
